* TODO: review cookie handling. Not always sent automatically. 
* TODO: review :variables in URI elements
* TODO: global responses
* TODO: request block conditions. 
* TODO: process templates for calls to set in get blocks


#### 0.8.2 (2010-03-05) ###############################

* FIXED: Misc issues with usage via module (Stella::Engine.load)
* CHANGE: Remove all logs except summary and exceptions
* CHANGE: Renamed .stella/logs/latest/request-exceptions to .stella/logs/latest/exceptions
* CHANGE: Removed unused Load implementations and renamed LoadQueue to Load
* CHANGE: Added proper names for statistics (response_time instead of do_request)
* CHANGE: Benelux 0.5.8 dependency
* CHANGE: Cleaned up generate mode CLI output
* CHANGE: Removed no-logging option
* CHANGE: Renamed Testrun#summary to Testrun#stats
* ADDED: JSON statistics log (.stella/logs/latest/stats)


#### 0.8.1.002 (2010-02-20) ###############################

* FIXED: fail on connection error
* CHANGE: Remove hanna dependency
* CHANGE: Now store complete headers sent rather than just configured. 


#### 0.8.1 (2010-02-10) ###############################

* FIXED: Handling of non ASCII characters with Nokogiri parsing in Ruby 1.9
* FIXED:  warning in Ruby 1.9
* FIXED: Setting of domain for HTTP authentication when the request URI 
  is a fully qualified URI. 
* CHANGE: Don't attempt to convert parameters or headers to ERB templates.
* CHANGE: Randomize order of usecase when generating load
* CHANGE: noparams and noheader now default to off. Must use with-param and with-header.
* ADDED: Stella.get


#### 0.8.0 (2010-01-16) ###############################

NOTE: The configuration language changed slightly in this release. 
See the README for more information on what needs to be updated. 

* FIXED: HTTP auth failures
* FIXED: Request timeouts should count towards failures
* FIXED: Stella::Client ID was changing between requests in certain conditions
* FIXED: HTTP delete now works correctly