@@ -2,4 +2,4 @@
 :MAJOR: 0
 :MINOR: 8
 :PATCH: 2
-:BUILD: '001'
+:BUILD: '002'
